# edm-cue-analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  188858051.nb  BPM_ACCURACY_REPORT.md  BPM_ANALYSIS.md  BPM_VALIDATION.md  CHANGE_7_VALIDATION_RESULTS.md  CONSENSUS_FIX_NOTES.md  CONTRIBUTING.md  DEV_CONTAINER_SETUP.md  DROP_DETECTION_REBUILD.md  ESSENTIA_INTEGRATION.md  GENRE_AWARE_IMPLEMENTATION.md  LICENSE  METADATA_REFACTORING_SUMMARY.md  Makefile  PKG-INFO  PROJECT_SUMMARY.md  PUSH_INSTRUCTIONS.md  QUICK_START.md  README.md  SOURCES.txt  VALIDATION_COMPLETE.md  WOLFRAM_ANALYSIS.md  __init__.py  analyze_drop_point.py  analyze_track.sh  analyzer.py  bpm_cache.json  bpm_comparison.csv  bpm_test_results.csv  bpm_test_results.json  bpm_validation_results.json  cli.py  compare_drop_annotations.py  compare_genre_improvements.py  config.py  consensus_test_output.txt  cue_generator.py  (+44 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: ci.yml  copilot-instructions.md
docs/: ARCHITECTURE.md  CONSENSUS_MODEL.md  DEVELOPMENT.md  ESSENTIA_METHODS.md  LIBRARY_USAGE.md  METADATA_ARCHITECTURE.md  MODULAR_ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  VENV_SETUP.md  drop_detection_tuning_guide.md  edm_structure_detection_guide.md
examples/: README.md  custom_config.yaml  custom_feature_extractors.py  example_usage.py  metadata_usage.py
mnt/user-data/outputs/edm_cue_analyzer/: README.md
mnt/user-data/outputs/edm_cue_analyzer/tests/: __init__.py
src/edm_cue_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  consensus.py  cue_generator.py  default_config.yaml  display.py  essentia_config.py  rekordbox.py
src/edm_cue_analyzer/analyses/: __init__.py  bpm.py  breakdowns.py  builds.py  drops.py  energy.py
src/edm_cue_analyzer/metadata/: README.md  __init__.py  aggregator.py  base.py  local.py  online.py  spotify.py  spotify_api.py
src/edm_cue_analyzer/utils/: bpm.py
tests/: __init__.py  test_analyzer.py  test_cli_args.py  test_metadata.py  test_metadata_providers.py  test_metadata_quick.py  test_spotify_integration.py
