[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edm-cue-analyzer"
version = "1.0.0"
description = "Automated cue point generation for DJ performance"
readme = "README.md"
authors = [
    {name = "EDM Cue Analyzer Project"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "colorama>=0.4.6",
    "soundfile>=0.12.0",
    "aubio>=0.4.9",
]

[project.optional-dependencies]
# Essentia provides best BPM detection for EDM (requires Linux or Dev Container)
essentia = [
    "essentia>=2.1b5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
edm-cue-analyzer = "edm_cue_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/crsmithdev/edm-cue-analyzer"
Repository = "https://github.com/crsmithdev/edm-cue-analyzer"
Issues = "https://github.com/crsmithdev/edm-cue-analyzer/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
edm_cue_analyzer = ["default_config.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/edm_cue_analyzer",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true  # For libraries without type stubs

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
